add  folders and tasks

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,8 @@
-@import './common';
-@import './example';
+// Utils
+@import './utils/main';
+// base
+@import './base/common';
+// components
+@import './components/main';
+// layout
+@import './layouts/main';
