--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,3 +1,15 @@
 $tel: 480px;
 $tablet: 768px;
-$desktop: 1200px;
+$desktop: 1280px;
+
+$color-bg-header: #111111;
+$color-bg-primary: #282828;
+$color-bg-secondary: #595959;
+
+$color-text: #FFFFFF;
+$color-text-primary: #F8F8F8;
+$color-text-secondary: #B7B7B7;
+$color-text-focus: #F87719;
+
+
+$cubic: 250ms cubic-bezier(0.4, 0, 0.2, 1);
