--- a/src/partials/upcoming.html
+++ b/src/partials/upcoming.html
@@ -1,1 +1,5 @@
-<div></div>
+<div class="Upcoming">
+    <h2 class="upcoming__title">Upcoming this month</h2>
+    
+    <button type="button" class="upcoming__button">Remind me</button>
+</div>
