--- a/src/partials/upcoming.html
+++ b/src/partials/upcoming.html
@@ -1,4 +1,4 @@
-<div class="Upcoming">
+<div class="upcoming">
     <h2 class="upcoming__title">Upcoming this month</h2>
     
     <button type="button" class="upcoming__button">Remind me</button>
