--- a/src/partials/weekly-trends.html
+++ b/src/partials/weekly-trends.html
@@ -1,9 +1,21 @@
 <section class="weekly-trends">
-    <div class="container">
-        <h2>WEEKLY TRENDS</h2>
-        <a href="#">See all</a>
-        <div class="wraper">
-            
-        </div>
-    </div>
+  <div class="container">
+    <h2>WEEKLY TRENDS</h2>
+    <a href="#">See all</a>
+    <ul class="wrapper"></ul>
+  </div>
 </section>
+
+<!-- <div class="rating">
+  <div class="rating__body">
+    <div class="rating__active"></div>
+    <div class="rating__items">
+      <input type="radio" class="rating__item" value="1" name="rating" />
+      <input type="radio" class="rating__item" value="2" name="rating" />
+      <input type="radio" class="rating__item" value="3" name="rating" />
+      <input type="radio" class="rating__item" value="4" name="rating" />
+      <input type="radio" class="rating__item" value="5" name="rating" />
+    </div>
+  </div>
+  <div class="rating__value">3.6</div>
+</div> -->
