in the development process

--- a/src/partials/weekly-trends.html
+++ b/src/partials/weekly-trends.html
@@ -1,11 +1,13 @@
 <section class="weekly-trends">
   <div class="container">
-    <h2>WEEKLY TRENDS</h2>
-    <a href="#">See all</a>
-    <ul class="wrapper"></ul>
+    <div class="wraper__txt">
+      <h2 class="wekly__title">WEEKLY TRENDS</h2>
+      <a href="#"><span class="wekly__link">See all</span></a>
+    </div>
+    <ul class="article__list"></ul>
   </div>
 </section>
-
+<article></article>
 <!-- <div class="rating">
   <div class="rating__body">
     <div class="rating__active"></div>
