--- a/src/partials/weekly-trends.html
+++ b/src/partials/weekly-trends.html
@@ -1,8 +1,8 @@
 <section class="weekly-trends">
   <div class="container">
     <div class="wraper__txt">
-      <h2 class="wekly__title">WEEKLY TRENDS</h2>
-      <a href="#"><span class="wekly__link">See all</span></a>
+      <h2 class="weekly__title">WEEKLY TRENDS</h2>
+      <a href="#"><span class="weekly__link">See all</span></a>
     </div>
     <ul class="article__list"></ul>
   </div>
