--- a/src/sass/layouts/_weekly-trends.scss
+++ b/src/sass/layouts/_weekly-trends.scss
@@ -20,7 +20,7 @@
     margin-bottom: 28px;
   }
 }
-.wekly__title {
+.weekly__title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -35,7 +35,7 @@
     line-height: 1.17;
   }
 }
-.wekly__link {
+.weekly__link {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18px;
