--- a/src/templates/upcoming.hbs
+++ b/src/templates/upcoming.hbs
@@ -1,5 +1,6 @@
 <div class="upcoming__info">
-     <img src="https://image.tmdb.org/t/p/original/{{backdrop_path}}" alt="{{original_title}}" loading="lazy" />
+     <img src="https://image.tmdb.org/t/p/original/{{backdrop_path}}" alt="{{original_title}}"  loading="lazy" class="upcoming__img" />
+     <div class="upcoming__info-layout">
      <h3 class ="upcoming__movie-title"><span class="upcoming__item-font-title">{{original_title}}</span></h3>
      <ul class="upcoming__list">
      <li class ="upcoming__item"><span class="upcoming__item-font">Release date </span>{{release_date}}</li>
@@ -9,4 +10,5 @@
      </ul>
      <p class ="upcoming__movie-about">About</p>
      <p class="upcoming__item-font-about">{{overview}}</p>
+     </div>
      </div>
