added mobile version

--- a/src/partials/hero-library.html
+++ b/src/partials/hero-library.html
@@ -1,6 +1,6 @@
 <!--Section-Hero-My-Library-->
 <section class="section hero-library">
-  <div class="container">
+  <div class="container hero-library__container">
     <div class="hero-library__box">
       <h1 class="hero-library__title">Create Your Dream Cinema</h1>
       <p class="hero-library__text">
