--- a/src/sass/layouts/_hero-library.scss
+++ b/src/sass/layouts/_hero-library.scss
@@ -1,23 +1,52 @@
+.hero-library__container {
+  padding-top: 40px;
+  padding-bottom: 114px;
+  background: linear-gradient(
+      83.48deg,
+      #0e0e0e 25.78%,
+      rgba(14, 14, 14, 0) 60.07%
+    ),
+    #0e0e0e;
+  border: 1px solid #000000;
+}
+
 .hero-library__title {
-  //   @include font-title($fw: 700, $fs: 32, $lh: 1.19);
+  @include font-title($fw: 700, $fs: 32, $lh: 1.19);
   font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 38px;
+  margin-bottom: 8px;
+  padding-left: 20px;
+  padding-right: 65px;
+
+  color: $color-text;
+
   display: flex;
   align-items: center;
 }
 
 .hero-library__text {
-  //   @include font-text($fs: 14, $lh: 1.14);
+  @include font-text($fs: 14, $lh: 1.14);
   font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
-  display: flex;
-  align-items: center;
+  padding-left: 20px;
+  padding-right: 51px;
 
-  color: #f8f8f8;
+  color: $color-text-primary;
+}
+
+.library-cards__sorry {
+  @include font-text($fs: 20, $lh: 1.4);
+  // color: $color-text;
+
+  text-align: center;
+  padding-left: 21px;
+  padding-right: 19px;
+  padding-top: 44px;
+  margin-bottom: 20px;
+}
+
+.library-cards__btn {
+  @include font-text($fw: 500, $fs: 12, $lh: 1.16);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 12px, 24px;
 }
