--- a/src/partials/card-library.html
+++ b/src/partials/card-library.html
@@ -1,11 +1,14 @@
-<section class="library__cards">
+<section class="library-cards">
   <div class="library container">
-    <ul class="library__list"></ul>
+    <ul class="library-cards__list"></ul>
   </div>
 </section>
 
 <div class="alert__message container">
-  <h2 class="library__sorry">
-    OOPS... We are very sorry! You don’t have any movies at your library.
+  <h2 class="library-cards__sorry">
+    OOPS...<br />
+    We are very sorry!<br />
+    You don’t have any movies at <br /> your library.
   </h2>
+  <button type="button" class="library-cards__btn">Search movie</button>
 </div>
