add start files card-catalog

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -10,6 +10,7 @@ $color-text: #FFFFFF;
 $color-text-primary: #F8F8F8;
 $color-text-secondary: #B7B7B7;
 $color-text-focus: #F87719;
+$color-stars: #f84119;
 
 
 $cubic: 250ms cubic-bezier(0.4, 0, 0.2, 1);
