--- a/src/partials/pagination-catalog.html
+++ b/src/partials/pagination-catalog.html
@@ -1,5 +1,5 @@
 <div id="tui-pagination-container" class="tui-pagination"></div>
-
-<script src="./api.js"></script>
+<!-- 
+<script src="../js/api.js"></script>
 <script src="./tui-pagination.min.js"></script>
-<script src="./pagination-catalog.js"></script>
+<script src="./pagination-catalog.js"></script> -->
