--- a/src/templates/upcoming.hbs
+++ b/src/templates/upcoming.hbs
@@ -3,7 +3,7 @@
      <div class="upcoming__info-layout">
      <h3 class ="upcoming__movie-title"><span class="upcoming__item-font-title">{{original_title}}</span></h3>
      <ul class="upcoming__list">
-     <li class ="upcoming__item"><span class="upcoming__item-font">Release date </span>{{release_date}}</li>
+     <li class ="upcoming__item"><span class="upcoming__item-font">Release date </span><span class="upcoming__item-data">{{release_date}}</span></li>
      <li class ="upcoming__item"><span class="upcoming__item-font">Vote/Votes </span>{{vote_average}}/{{vote_count}}</li>
      <li class ="upcoming__item"><span class="upcoming__item-font">Popularity </span>{{popularity}}</li>
      <li class ="upcoming__item"><span class="upcoming__item-font">Genre </span>{{genre_ids}}</li>
