--- a/src/sass/components/_modal-movie.scss
+++ b/src/sass/components/_modal-movie.scss
@@ -48,7 +48,7 @@
     @include font-text;
     padding-bottom: 14px;
   }
-  &__rating .rating {
+  &__rating .rating-vote {
     padding: 0 8px;
     font-weight: 500;
     font-size: 14px;
