--- a/src/sass/layouts/_card-catalog.scss
+++ b/src/sass/layouts/_card-catalog.scss
@@ -4,13 +4,16 @@
 }
  
 .gallery {
+    padding-top: 16px;
     width: 100%;
     display: flex;
-    gap: 20px;
-    flex-direction: row;
+    gap: 16px;
+    flex-direction: column;
     flex-wrap: wrap;
 
     @include tablet {
+        gap: 16px;
+    flex-direction: row;
         padding-top: 52px;
         padding-bottom: 44px;
     }
@@ -21,69 +24,27 @@
     }
 }
 
-.wraper__txt {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 24px;
-
-    @include desktop {
-        margin-bottom: 28px;
-    }
-}
-
-.weekly__title {
-    @include font-title ($fs: 16, $lh: 1.18);
-    text-transform: uppercase;
-    color: $color-text;
-
-    @include tablet {
-        font-size: 24px;
-        line-height: 1.16;
-    }
-
-    @include desktop {
-        font-size: 28px;
-        line-height: 1.17;
-    }
-}
-
-.weekly__link {
-    @include font-title ($fs: 16, $lh: 1.18);
-    color: $color-text-focus;
-
-    @include tablet {
-        font-size: 24px;
-        line-height: 1.16;
-    }
-
-    @include desktop {
-        font-size: 28px;
-        line-height: 1.17;
-    }
-}
-
-
-
-.article__item {
+.gallery__item {
     position: relative;
-    // display: flex;
-    // gap: 16px;
-    width: calc((100% - 70px)/4);
+    width: 100%;
 
-    @include tablet {
-        width: 224px;
+   @include tablet {
+    width: calc((100% - 32px)/3);
+    
     }
 
     @include desktop {
-        width: 395px;
+        width: calc((100% - 32px)/3);
+    }
+
+    &:hover, &:focus {
+        scale: 1.05;
     }
 }
 
-
-
-.article__img {
+.gallery__img {
     margin: 0;
+    width: 100%;
     border-radius: 5px;
 }
 
@@ -115,7 +76,7 @@
     }
 }
 
-.title__txt {
+.details__title {
     @include font-title ($fs: 12, $lh: 1.66);
     text-transform: uppercase;
     color: $color-text;
@@ -131,7 +92,7 @@
     }
 }
 
-.movieGenres {
+.movieGenres, .date {
     @include font-title ($fs: 12, $lh: 1.66);
     color: $color-text-secondary;
 
@@ -205,7 +166,7 @@
     top: 0;
     left: 0;
 
-    color: $color-stars;
+    fill: $color-stars;
 }
 
 .rating__items {
