--- a/src/templates/cards.hbs
+++ b/src/templates/cards.hbs
@@ -1,13 +1,13 @@
  {{#each this}}
- <li class="article__item">
+ <li class="gallery__item">
         <article>
-        <img class="article__img" src=https://image.tmdb.org/t/p/w300{{poster_path}} alt="{{title}}" width="395" >
+        <img class="gallery__img" src=https://image.tmdb.org/t/p/w500{{poster_path}} alt="{{title}}" width="395" >
           <div class="details">
-            <p class="title__txt">{{title}}</p>
+            <p class="details__title">{{title}}</p>
             <div class="wraper__details">
             <p class="movieGenres">{{genre_ids}}</p>
-            
-            <div class="rating">
+             <p class="date">{{release_date}}</p>
+              <div class="rating">
               <div class="rating__body">
                 <div class="rating__active"></div>
                 <div class="rating__items">
@@ -23,6 +23,5 @@
             </div>
           </div>
         </article>
-          
         </li>
         {{/each}}
