--- a/src/partials/modal-movie.html
+++ b/src/partials/modal-movie.html
@@ -1,2 +1,9 @@
-<div class="backdrop">
+<div class="hidden backdrop">
+  <div class="modal" id="${data.id}">
+    <button class="button__close" type="button">
+      <svg>
+        <use href="./images/symbol-defs.svg#icon-close"></use>
+      </svg>
+    </button>
+  </div>
 </div>
