--- a/src/sass/components/_modal-movie.scss
+++ b/src/sass/components/_modal-movie.scss
@@ -1,5 +1,4 @@
 .backdrop {
-  display: none;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -50,7 +49,8 @@
     padding-bottom: 14px;
   }
   &__rating .rating-vote {
-    padding: 0 8px;
+    margin-right: 5px;
+    padding: 0 5px;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
