--- a/src/sass/layouts/_weekly-trends.scss
+++ b/src/sass/layouts/_weekly-trends.scss
@@ -1,80 +1,81 @@
 .weekly-trends {
-  background-color: #111111;
+  background-color: $color-bg-header;
   padding-top: 40px;
   padding-bottom: 32px;
-  @media screen and (min-width: 768px) {
+  @include tablet {
     padding-top: 52px;
     padding-bottom: 44px;
   }
-  @media screen and (min-width: 1280px) {
+  @include desktop {
     padding-top: 80px;
     padding-bottom: 60px;
   }
 }
+
 .wraper__txt {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 24px;
-  @media screen and (min-width: 1280px) {
+  @include desktop {
     margin-bottom: 28px;
   }
 }
+
 .weekly__title {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18;
+  @include font-text($fw: 500, $fs: 16, $lh: 1.18, $ls: 0.01);
   text-transform: uppercase;
-  color: #ffffff;
-  @media screen and (min-width: 768px) {
+  color: $color-text;
+  @include tablet {
     font-size: 24px;
     line-height: 1.16;
   }
-  @media screen and (min-width: 1280px) {
+  @include desktop {
     font-size: 28px;
     line-height: 1.17;
   }
 }
+
 .weekly__link {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18px;
-  color: #f87719;
-  @media screen and (min-width: 768px) {
+  @include font-text($fw: 500, $fs: 16, $lh: 1.18, $ls: 0.01);
+  color: $color-text-focus;
+  @include tablet {
     font-size: 24px;
     line-height: 1.16;
   }
-  @media screen and (min-width: 1280px) {
+  @include desktop {
     font-size: 28px;
     line-height: 1.17;
   }
 }
+
 .article__list {
   display: flex;
 }
+
 .article__item {
   position: relative;
   display: flex;
   width: 280px;
-  @media screen and (min-width: 768px) {
+  @include tablet {
     width: 224px;
   }
-  @media screen and (min-width: 1280px) {
+  @include desktop {
     width: 395px;
+  }
+  &:not(:last-child) {
+    @include tablet {
+      margin-right: 16px;
+    }
+  }
+  &:not(:first-child) {
+    display: none;
+    @include tablet {
+      display: block;
+    }
   }
 }
 
-.article__item:not(:last-child) {
-  @media screen and (min-width: 768px) {
-    margin-right: 16px;
-  }
-}
-.article__item:not(:first-child) {
-  display: none;
-  @media screen and (min-width: 768px) {
-    display: block;
-  }
-}
 .article__img {
   margin: 0;
   border-radius: 5px;
@@ -96,46 +97,43 @@
   padding-right: 12px;
   padding-bottom: 12px;
   padding-left: 12px;
-  @media screen and (min-width: 768px) {
+  @include tablet {
     width: 224px;
   }
-  @media screen and (min-width: 1280px) {
+  @include desktop {
     width: 395px;
-    padding-top: 100%;
     padding-right: 20px;
     padding-bottom: 20px;
     padding-left: 20px;
   }
 }
+
 .title__txt {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.66;
+  @include font-text($fw: 500, $fs: 12, $lh: 1.66, $ls: 0.01);
   text-transform: uppercase;
   color: #ffffff;
-
-  @media screen and (min-width: 768px) {
+  @include tablet {
     line-height: 1.5;
   }
-  @media screen and (min-width: 1280px) {
+  @include desktop {
     font-size: 20px;
     line-height: 1.15;
     margin-bottom: 8px;
   }
 }
+
 .movieGenres {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.66;
-  color: #b7b7b7;
-  @media screen and (min-width: 768px) {
+  @include font-text($fw: 500, $fs: 12, $lh: 1.66, $ls: 0.01);
+  color: $color-text-secondary;
+  @include tablet {
     line-height: 1.5;
   }
-  @media screen and (min-width: 1280px) {
+  @include desktop {
     font-size: 20px;
     line-height: 1.15px;
   }
 }
+
 .rating__value {
   display: flex;
   width: 1px;
@@ -150,7 +148,7 @@
 .wraper__details {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
 }
 
 // ------------- RATING------------
@@ -159,21 +157,23 @@
   align-items: flex-end;
   font-size: 14px;
   line-height: 0.75;
-  @media screen and (min-width: 768px) {
+  @include tablet {
     font-size: 10px;
   }
-  @media screen and (min-width: 1280px) {
+  @include desktop {
     font-size: 18px;
   }
 }
+
 .rating__body {
   position: relative;
+  &::before {
+    content: '✰✰✰✰✰';
+    display: block;
+    color: $color-text-focus;
+  }
 }
-.rating__body::before {
-  content: '✰✰✰✰✰';
-  display: block;
-  color: #f84119;
-}
+
 .rating__active {
   position: absolute;
   width: 0%;
@@ -181,25 +181,34 @@
   top: 0;
   left: 0;
   overflow: hidden;
-}
-.rating__active::before {
-  content: '★★★★★';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+  &::before {
+    content: '★★★★★';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 
-  color: #f84119;
+    background: linear-gradient(
+      141.22deg,
+      #f84119 9.4%,
+      rgba(248, 159, 25, 0.68) 91.91%
+    );
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 }
+
 .rating__items {
   display: flex;
+  align-items: center;
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0;
+  bottom: 0;
   left: 0;
 }
+
 .rating__item {
   width: 20%;
   height: 100%;
