--- a/src/partials/weekly-trends.html
+++ b/src/partials/weekly-trends.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="wraper__txt">
       <h2 class="weekly__title">WEEKLY TRENDS</h2>
-      <a href="#../catalog.html"><span class="weekly__link">See all</span></a>
+      <a href="catalog.html"><span class="weekly__link">See all</span></a>
     </div>
     <ul class="article__list"></ul>
   </div>
