create modal team

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,14 +1,14 @@
 <footer class="footer">
-    <div class="container">
-        <div class="footer__wrap">
-            <p class="text">© 2023 | All Rights Reserved | </p>
-            <p class="text"> Developed with
-                <svg width="14" height="12.88" class="icon-heart">
-                    <use href="./images/symbol-defs.svg#icon-heart"></use>
-                </svg>
-                <a href="#" class="team">by GoIT Students</a>
-            </p>
-        </div>
-
+  <div class="container">
+    <div class="footer__wrap">
+      <p class="text">© 2023 | All Rights Reserved |</p>
+      <p class="text">
+        Developed with
+        <svg width="14" height="12.88" class="icon-heart">
+          <use href="./images/symbol-defs.svg#icon-heart"></use>
+        </svg>
+        <a href="#" class="team open-modal-team">by GoIT Students</a>
+      </p>
     </div>
+  </div>
 </footer>
