--- a/src/partials/hero-library.html
+++ b/src/partials/hero-library.html
@@ -2,7 +2,7 @@
 <section class="section hero-library">
   <div class="container hero-library__container">
     <div class="hero-library__box">
-      <h1 class="hero-library__title">Create Your Dream Cinema</h1>
+      <h1 class="hero-library__title">Create Your <br />Dream Cinema</h1>
       <p class="hero-library__text">
         Is a guide to designing a personalized movie theater experience with the
         right equipment, customized decor, and favorite films. This guide helps
