--- a/src/sass/layouts/_upcoming.scss
+++ b/src/sass/layouts/_upcoming.scss
@@ -145,6 +145,11 @@ color: $color-text-secondary;
   font-size: 16px;
   line-height: 1.19;
 }
+.upcoming__item-pop, .upcoming__item-genre{
+  font-size: 16px;
+  line-height: 1.19;
+  color:#FFFFFF
+}
 
 .upcoming__item-vote, .upcoming__item-votes{
   border-radius: 5px;
