--- a/src/sass/components/_modal-team.scss
+++ b/src/sass/components/_modal-team.scss
@@ -1,4 +1,3 @@
-
 .backdrop-modal {
   position: fixed;
   width: 100%;
@@ -42,156 +41,204 @@
 }
 
 .team__modal {
-  border-radius: 10px;
   position: absolute;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  top: 10%;
+  top: 53%;
   left: 50%;
-  margin: 0;
-  padding: 7px;
-  background-color: #f7f7f7;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
   overflow-y: scroll;
-
-  max-width: 840px;
+  min-width: 280px;
   height: 100%;
-  max-height: 558px;
-  border-radius: 3px;
-  height: max-content;
-  padding-left: 20px;
-}
+  padding: 48px 20px 40px 20px;
+  border-radius: 4px;
+  background-color: #fff;
 
-.team__title {
-  padding-top: 13px;
-  color: black;
+  transition: transform 250ms ease-in-out;
+
+  @media screen and (min-width: 768px) {
+    top: 50%;
+    min-width: 704px;
+    height: 552px;
+    padding: 40px 72px 40px 36px;
+  }
+  @media screen and (min-width: 1024px) {
+    top: 50%;
+    min-width: 850px;
+    height: 700px;
+    padding: 20px 16px;
+  }
+}
+.footer-modal__title {
   font-family: 'Roboto';
   font-style: normal;
-  font-weight: 500;
-  font-size: 23px;
-  line-height: 35px;
-  margin-bottom: 20px;
   text-align: center;
-  text-shadow: 1px 1px 1px #ccc, 1px -1px 1px #ccc, -1px 1px 1px #ccc,
-    -1px -1px 1px #ccc;
-  transition: all 1s;
-  &:hover,
-  &:focus {
-    color: #ff6b08;
-  }
-
-  @media screen and (min-width: 768px) {
-    padding-top: 15px;
-    margin-bottom: 30px;
-    font-size: 30px;
-  }
-}
-
-.team__box {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 278px;
-  gap: 40px;
-
-  @media screen and (min-width: 768px) {
-    width: 490px;
-    gap: 30px;
-    margin-bottom: 35px;
-  }
-
-  @media screen and (min-width: 1280px) {
-    width: 790px;
-    gap: 45px;
-    margin-bottom: 35px;
-  }
-}
-
-.team__member {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 230px;
-  transition: transform 450ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    transform: scale(1.05);
-  }
-
-  @media screen and (min-width: 768px) {
-    &:hover,
-    &:focus {
-      transform: scale(1.05);
-    }
-  }
-
-  @media screen and (min-width: 1280px) {
-    &:hover,
-    &:focus {
-      transform: scale(1.05);
-    }
-  }
-}
-
-.team__photo {
-  height: auto;
-  width: 100px;
-  border: 2px;
-  margin: auto;
-  border-radius: 5px;
-  box-shadow: 0px 0px 3px 5px #ccc;
-}
-
-.team__name {
-  font-size: 18px;
-  font-weight: 600;
-  color: black;
-  transition-duration: 0.5s;
-
-  &:hover,
-  &:focus {
-    color: #ff6b08;
-  }
-
-  @media screen and (min-width: 768px) {
-    font-size: 19px;
-    align-content: center;
-  }
-
-  @media screen and (min-width: 1280px) {
-    font-size: 22px;
-  }
-}
-
-.team__role {
-  font-size: 15px;
   font-weight: 500;
-  color: gray;
+  font-size: 20px;
+  line-height: 1.15;
+  color: #111;
+  text-transform: uppercase;
 
-  @media screen and (min-width: 1280px) {
-    font-size: 18px;
+  margin: 0 0 20px 0;
+}
+
+.footer-modal__container {
+  @media screen and (min-width: 768px) {
+    gap: 50px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
   }
 }
 
-.team__card {
-  width: 100px;
-  height: auto;
-  border: none;
-  outline: none;
-  color: transparent;
-  background: transparent;
-  cursor: pointer;
+.footer-modal__box {
+  border-radius: 5px;
+  overflow: hidden;
   position: relative;
-  z-index: 0;
-  border-radius: 10%;
-  margin-bottom: 10px;
+  color: #fff;
+  background-color: #111;
+  transition: 0.5s;
+
+  &:hover,
+  &:focus {
+    transform: translateY(-20px);
+    cursor: pointer;
+  }
+}
+
+.footer-modal__box:not(:last-child) {
+  margin-bottom: 20px;
 
   @media screen and (min-width: 768px) {
-    width: 100%;
-    height: 100%;
-
+    margin-bottom: 0;
   }
+}
+
+.footer-modal__box::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 101px;
+  background: linear-gradient(45deg, #b8b4ab, #3b3637);
+  @media screen and (min-width: 768px) {
+    width: 264px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: 375px;
+  }
+}
+
+.footer-modal__box::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 101px;
+  background: linear-gradient(45deg, #b8b4ab, #3b3637);
+  filter: blur(30px);
+  @media screen and (min-width: 768px) {
+    width: 264px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: 375px;
+  }
+}
+
+.footer-modal__box:nth-child(even)::before,
+.footer-modal__box:nth-child(even)::after {
+  background: linear-gradient(315deg, #3b3637, #b8b4ab);
+}
+
+.footer-modal__img-thumb {
+  height: 300px;
+
+  @media screen and (min-width: 768px) {
+    width: 264px;
+    height: 373.55px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: 375px;
+    height: 478px;
+  }
+}
+
+.footer-modal__img-thumb > img {
+  display: block;
+  height: 100%;
+  width: 100%;
+
+  object-fit: cover;
+}
+
+.footer-modal__pic {
+  height: 300px;
+
+  @media screen and (min-width: 768px) {
+    width: 264px;
+    height: 373.55px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: 375px;
+    height: 478px;
+  }
+}
+
+.footer-modal__thumb {
+  padding: 20px 10px;
+  height: 100px;
+  position: relative;
+
+  @media screen and (min-width: 768px) {
+    width: 264px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: 375px;
+  }
+}
+
+.footer-modal__thumb span {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  right: 6px;
+  bottom: 6px;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.footer-modal__thumb span::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.1);
+  pointer-events: none;
+}
+
+.footer-modal__content {
+  position: relative;
+  z-index: 10;
+}
+
+.footer-modal__name {
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 1.33;
+  color: #fff;
+}
+
+.footer-modal__role {
+  font-family: 'Roboto';
+  line-height: 1.17;
+  color: #fff;
 }
