--- a/src/sass/components/_loader.scss
+++ b/src/sass/components/_loader.scss
@@ -24,7 +24,7 @@
   height: 45px;
   width: 45px;
   border-width: 6px;
-  border: solid #b7b7b7;
+  border: solid $color-neutral-light;
   background-color: transparent;
   border-radius: 50%;
   border-left-color: rgba(248, 65, 25, 0.8);
