--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -13,7 +13,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/vira.jpg"
+            src="images/vira.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -30,7 +30,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/ilona.jpg"
+            src="images/ilona.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -47,7 +47,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/artem.jpg"
+            src="images/artem.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -64,7 +64,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/olena.jpg"
+            src="images/olena.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -81,7 +81,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/ihor.jpg"
+            src="images/ihor.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -98,7 +98,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/serhii.jpg"
+            src="images/serhii.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -115,7 +115,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/oleksandr.jpg"
+            src="images/oleksandr.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -132,7 +132,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/vita.jpg"
+            src="images/vita.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -149,7 +149,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/tetiana.jpg"
+            src="images/tetiana.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -166,7 +166,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/unknown.jpg"
+            src="images/unknown.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -183,7 +183,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/unknown.jpg"
+            src="images/unknown.jpg"
             alt="Teammate photo"
           />
         </div>
