--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -30,7 +30,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="images/ilona.jpg"
+            <!-- src="images/ilona.jpg" -->
             alt="Teammate photo"
           />
         </div>
