--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -1,4 +1,4 @@
-<div class="backdrop-modal team__backdrop--hidden">
+<!-- <div class="backdrop-modal team__backdrop--hidden">
   <div class="team__modal">
     <button class="team__modal--close close-modal-team">
       <svg class="team__icon team__icon--close" width="25" height="25">
@@ -30,7 +30,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            <!-- src="images/ilona.jpg" -->
+            src="images/ilona.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -197,4 +197,4 @@
       </li>
     </ul>
   </div>
-</div>
+</div> -->
