--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -13,7 +13,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/vira.jpg"
+            src="./images/team-vira.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -30,7 +30,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/ilona.jpg"
+            src="./images/team-ilona.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -47,7 +47,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/artem.jpg"
+            src="./images/team-artem.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -64,7 +64,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/olena.jpg"
+            src="./images/team-olena.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -81,7 +81,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/ihor.jpg"
+            src="./images/team-ihor.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -98,7 +98,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/serhii.jpg"
+            src="./images/team-serhii.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -115,7 +115,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/oleksandr.jpg"
+            src="./images/team-oleksandr.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -132,7 +132,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/vita.jpg"
+            src="./images/team-vita.jpg"
             alt="Teammate photo"
           />
         </div>
@@ -149,7 +149,7 @@
           <img
             loading="lazy"
             class="footer-modal__pic"
-            src="./images/tetiana.jpg"
+            src="./images/team-tetiana.jpg"
             alt="Teammate photo"
           />
         </div>
