--- a/src/sass/layouts/_card-catalog.scss
+++ b/src/sass/layouts/_card-catalog.scss
@@ -104,7 +104,7 @@
 
     font-size: 1px;
     color: transparent;
-    text-align: center;
+    text-align: flex-end;
 }
 
 .wraper__details {
@@ -117,6 +117,7 @@
 .rating {
     display: flex;
     align-items: flex-end;
+    
     font-size: 14px;
     line-height: 0.75;
 
@@ -143,7 +144,7 @@
     position: absolute;
     width: 0%;
     height: 100%;
-    top: 0;
+    bottom: 0;
     left: 0;
     overflow: hidden;
 }
@@ -153,7 +154,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    top: 0;
+    bottom: 0;
     left: 0;
 
     fill: $color-stars;
@@ -164,7 +165,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    top: 0;
+    bottom: 0;
     left: 0;
 }
 
