create scroll-up btn

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,8 +9,12 @@
         </svg>
 
         <a href="#" class="team open-modal-team">by GoIT Students</a>
-
       </p>
     </div>
   </div>
+  <button id="scroll-up-btn">
+    <svg class="up-button__icon" width="35" height="37">
+      <use href="./images/symbol-defs.svg#icon-scroll-up-button"></use>
+    </svg>
+  </button>
 </footer>
