--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -1,4 +1,4 @@
-<!-- <div class="backdrop-modal team__backdrop--hidden">
+<div class="backdrop-modal team__backdrop--hidden">
   <div class="team__modal">
     <button class="team__modal--close close-modal-team">
       <svg class="team__icon team__icon--close" width="25" height="25">
@@ -215,4 +215,4 @@
       </li>
     </ul>
   </div>
-</div> -->
+</div>
