--- a/src/sass/layouts/_weekly-trends.scss
+++ b/src/sass/layouts/_weekly-trends.scss
@@ -1,5 +1,5 @@
 .weekly-trends {
-  background-color: $color-bg-header;
+  background-color: var(--bg-primary);
   padding-top: 40px;
   padding-bottom: 32px;
   @include tablet {
@@ -25,7 +25,7 @@
 .weekly__title {
   @include font-text($fw: 500, $fs: 16, $lh: 1.18, $ls: 0.01);
   text-transform: uppercase;
-  color: $color-text;
+  color:var(--color-text-primary);
   @include tablet {
     font-size: 24px;
     line-height: 1.16;
@@ -38,7 +38,7 @@
 
 .weekly__link {
   @include font-text($fw: 500, $fs: 16, $lh: 1.18, $ls: 0.01);
-  color: $color-text-focus;
+  color: $color-accent;
   @include tablet {
     font-size: 24px;
     line-height: 1.16;
@@ -111,7 +111,7 @@
 .title__txt {
   @include font-text($fw: 500, $fs: 12, $lh: 1.66, $ls: 0.01);
   text-transform: uppercase;
-  color: #ffffff;
+  color: $color-primary-light;
   @include tablet {
     line-height: 1.5;
   }
@@ -124,7 +124,7 @@
 
 .movieGenres {
   @include font-text($fw: 500, $fs: 12, $lh: 1.66, $ls: 0.01);
-  color: $color-text-secondary;
+  color: $color-neutral-light;
   @include tablet {
     line-height: 1.5;
   }
@@ -170,7 +170,7 @@
   &::before {
     content: '✰✰✰✰✰';
     display: block;
-    color: $color-text-focus;
+    color: $color-accent;
   }
 }
 
