--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -27,6 +27,7 @@ $color-primary-light: #ffffff;
 $color-secondary-light: #f8f8f8;
 $color-neutral-light: #b7b7b7;
 $color-accent: #f87719;
+$color-stars: #f84119;
 
 .light {
   // Header
@@ -48,6 +49,7 @@ $color-accent: #f87719;
   --color-text-info: #{$color-primary-dark};            // #111111 - #b7b7b7
   --color-text-data: #{$color-secondary-dark};          // #282828 - #ffffff
   --color-text-neutral: #{$color-neutral-dark};         // #595959 - #b7b7b7
+  --color-text-vote: #{$color-secondary-dark};
 
   // Shadows
   --color-shadow-popup: rgba(0, 0, 0, 0.22);  // rgba(0, 0, 0, 0.22) - rgba(255, 107, 8, 0.42)
@@ -76,7 +78,7 @@ $color-accent: #f87719;
   --color-text-info: #{$color-neutral-light};           // #111111 - #b7b7b7
   --color-text-data: #{$color-primary-light};           // #282828 - #ffffff
   --color-text-neutral: #{$color-neutral-light};        // #595959 - #b7b7b7
-
+  --color-text-vote: #{$color-primary-dark};
 
   // Shadows
   --color-shadow-popup: rgba(255, 107, 8, 0.42);  // rgba(0, 0, 0, 0.22) - rgba(255, 107, 8, 0.42)
