--- a/src/sass/layouts/_upcoming.scss
+++ b/src/sass/layouts/_upcoming.scss
@@ -1,6 +1,5 @@
-.upcoming
-{background-color: var(--bg-primary);
-
+.upcoming{
+  background-color: var(--bg-primary);
 }
 .upcoming{
   padding-top: 32px;
