--- a/src/partials/weekly-trends.html
+++ b/src/partials/weekly-trends.html
@@ -4,6 +4,8 @@
       <h2 class="weekly__title">WEEKLY TRENDS</h2>
       <a href="catalog.html"><span class="weekly__link">See all</span></a>
     </div>
-    <ul class="article__list"></ul>
+    <ul class="article__list">
+      
+    </ul>
   </div>
 </section>
