--- a/src/sass/layouts/_upcoming.scss
+++ b/src/sass/layouts/_upcoming.scss
@@ -198,6 +198,7 @@ color: var(--color-text-secondary);
   flex-direction: row;
   align-items: center;
   text-align: center;
+  z-index: 10;
   padding: 12px 24px;
   gap: 10px; 
   margin-top: 20px;
