--- a/src/partials/card-library.html
+++ b/src/partials/card-library.html
@@ -4,7 +4,7 @@
   </div>
 </section>
 
-<div class="alert__message container visually-hidden">
+<div class="alert__message container hidden">
   <h2 class="library-cards__sorry">
     OOPS...<br />
     We are very sorry!<br />
