--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -1,7 +1,7 @@
 <div class="backdrop-modal team__backdrop--hidden">
   <div class="team__modal">
-    <button class="team__modal--close close-modal-team">
-      <svg class="team__icon team__icon--close" width="25" height="25">
+    <button class="team__modal--close close-modal-team button__close" type="button">
+      <svg>
         <use href="./images/symbol-defs.svg#icon-close"></use>
       </svg>
     </button>
