--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
       <nav class="navigation">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a href="/" class="navigation__link">Home</a>
+            <a href="index.html" class="navigation__link">Home</a>
           </li>
           <li class="navigation__item">
             <a href="catalog.html" class="navigation__link">Catalog</a>
